--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,3 +4,33 @@
         "destination": "/api" 
     }]
 }
+
+{
+    "version": 2,
+    "builds": [
+      {
+        // Specify file to convert to a serverless function
+        "src": "index.js",
+        // Specify the NPM module that is used for the build
+        "use": "@now/node"
+      }
+    ]
+  }
+
+  {
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@now/node"
+      }
+    ],
+    "routes": [
+      {
+        // Specify which paths will route to a destination using a regex
+        "src": "/(.*)",
+        // Specify the paths' destination
+        "dest": "index.js"
+      }
+    ]
+  }
