--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,9 @@
     "dotenv": "^16.1.4",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "netlify-cli": "^12.7.2",
+    "netlify-lamda": "^2.0.15",
+    "serverless-http": "^2.7.0",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^7.2.4",
