--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,12 @@
     "node": "14.x"
   },
   "scripts": {
-    "build": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
-    "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
+    "build": "tsc",
+    "start": "server.ts",
     "dev": "nodemon src/server.ts",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
